<resources>
    <string name="app_name">Неэксплуатируемый транспорт</string>
    <string name="logo">Лого</string>
    <string name="enter_welcome">Для входа введите свои учетные данные</string>
    <string name="login">Логин</string>
    <string name="input.login">Введите логин</string>
    <string name="password">Пароль</string>
    <string name="input.password">Введите пароль</string>
    <string name="enter">Войти</string>
    <string name="version">Версия приложения: 0.0.1</string>
</resources>
