<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/BaseAppTheme.Enter"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_horizontal">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:gravity="center">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/company_logo"
            android:contentDescription="@string/logo"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingLeft="29dp"
        android:paddingRight="29dp"
        android:gravity="center_horizontal">
        <Space
            android:layout_width="match_parent"
            android:layout_height="25dp"/>
        <TextView
            style="@style/BaseText.Inactive.PreNormal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/enter_welcome"
            android:gravity="center_horizontal"
            android:paddingBottom="7dp"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="?attr/colorLoginBg"
            android:layout_marginBottom="36dp"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white80"
            android:paddingTop="8dp"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:paddingBottom="14dp"
            android:layout_marginLeft="29dp"
            android:layout_marginRight="29dp"
            android:orientation="vertical">
            <TextView
                style="@style/BaseText.EditHeader.Small"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login" />
            <EditText
                style="@style/BaseEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/input.login"
                android:inputType="text"/>

        </LinearLayout>
        <Space
            android:layout_width="match_parent"
            android:layout_height="8dp"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white80"
            android:paddingTop="8dp"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:paddingBottom="14dp"

            android:layout_marginLeft="29dp"
            android:layout_marginRight="29dp"
            android:orientation="vertical">
            <TextView
                style="@style/BaseText.EditHeader.Small"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/password" />
            <EditText
                style="@style/BaseEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/input.password"
                android:inputType="text"/>

        </LinearLayout>
        <Space
            android:layout_width="match_parent"
            android:layout_height="36dp" />
        <Button
            style="@style/BaseButton.Primary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/enter"/>
        <Space
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"/>
        <TextView
            style="@style/BaseText.Inactive.PreNormal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/version"
            android:paddingBottom="18dp"/>
    </LinearLayout>

</LinearLayout>